--- a/index.html
+++ b/index.html
@@ -3772,7 +3772,7 @@ Tapestry,TAP-uh-stree,T AE  P AH  S T R IY
     {title:'Welcome', text:'Simple helps you practice words and makes sounds easier to feel.', icon:'🙂'},
     {title:'Listen', text:'Tap Listen to hear the word.', icon:'🔊'},
     {title:'Slow', text:'Tap Slow to hear it slower.', icon:'🐢'},
-    {title:'Choose words', text:'Beginners = easy words. Advanced = longer words.},
+    {title:'Choose words', text:'Beginners = easy words. Advanced = longer words. Random = surprise.', icon:'🎲'},
     {title:'Practice 10', text:'Practice 10 gives 10 words. Auto goes to the next word every 10 seconds.', icon:'🎯'},
     {title:'Sound help', text:'Tap a sound button for mouth/tongue placement help.', icon:'👄'},
   ];
