--- a/index.html
+++ b/index.html
@@ -4015,10 +4015,10 @@ Tapestry,TAP-uh-stree,T AE  P AH  S T R IY
     }else{
       phDiagram.innerHTML=DIAGRAMS[info.cat] || DIAGRAMS.vowel;
     }
-    phHow.textContent=('Like "' + soundCue(key) + '".');
-    phHint.textContent=('Example: "' + soundCue(key) + '"');
-    phListen.onclick=()=>speak(soundCue(key), 1);
-    phSlow.onclick=()=>speak(soundCue(key), 0.6);
+    phHow.textContent = info.how || ('Like "' + soundCue(key) + '".');
+    phHint.textContent = 'Example: "' + (info.ex || soundCue(key)) + '"';
+    phListen.onclick = () => speak(soundCue(key), 1);
+    phSlow.onclick = () => speak(soundCue(key), 0.6);
     phOverlay.classList.add('show');
   }
   function closePh(){ phOverlay.classList.remove('show'); }
