--- a/index.html
+++ b/index.html
@@ -3760,9 +3760,9 @@ Tapestry,TAP-uh-stree,T AE  P AH  S T R IY
       <button id="ultraOff" type="button" class="active">Off</button>
       <button id="ultraOn" type="button">On</button>
     </div>
-    <div class="row left" style="margin-bottom:8px;">
+    <div class="row left"fle="margin-bottom:8px;">
       <div style="font-weight:1000; min-width:120px;">Support</div>
-      <button id="tipOpen" type="button">❤️ Optional Tip</button>
+      <button id="tipOpen" type="button">❤️ Optional Donation</button>
     </div>
     <div class="row left caregiver-only">
       <button id="backHome" type="button">🏠 Back to Home</button>
@@ -3777,15 +3777,20 @@ Tapestry,TAP-uh-stree,T AE  P AH  S T R IY
       <div class="modalTitle">Support Simple</div>
       <button id="tipClose" type="button" class="closeBtn">✖ Close</button>
     </div>
-    <div style="font-size:16px; line-height:1.35; margin:6px 0 10px 0;">
-      Simple is <b>free</b> (no ads, no account). Donations are <b>optional</b> and help support development.
-      <div style="margin-top:6px; opacity:0.85;">No features are unlocked — just a thank you ❤️</div>
-    </div>
+    <div style="font-size:13px; line-height:1.35; margin:6px 0 10px 0;">
+      Built after my stroke to support speech recovery for everyone. 
+      <br>
+      Simple is free and forever. No ads. No account. No tracking. No data mining. 
+      <br>
+      Optional support only — no features unlocked. I’ll keep improving Simple either way.
+      <br>
+      It helps cover costs like Apple’s yearly developer fee and new equipment. Thank you ❤️
+          </div>
     <div class="row" style="gap:10px; flex-wrap:wrap; justify-content:center; margin-top:8px;">
       <button id="tipBtn1" type="button" data-sku="tip_1">Donation (loading…)</button>
       <button id="tipBtn3" type="button" data-sku="tip_3">Donation (loading…)</button>
       <button id="tipBtn5" type="button" data-sku="tip_5">Donation (loading…)</button>
-      <button id="tipBtn10" type="button" data-sku="tip_5">Donation (loading…)</button>
+      <button id="tipBtn10" type="button" data-sku="tip_10">Donation (loading…)</button>
     </div>
     <div id="tipStatus" style="margin-top:12px; text-align:center; font-size:14px; opacity:0.9;"></div>
     <div style="margin-top:10px; font-size:13px; opacity:0.75; text-align:center;">
