--- a/index.html
+++ b/index.html
@@ -4282,7 +4282,7 @@ Tapestry,TAP-uh-stree,T AE  P AH  S T R IY
 
     <div style="font-size:12px; line-height:1.35; margin-top:8px;">
       Built after my stroke to support speech recovery for everyone.<br>
-      Simple is free — forever.d No ads. No account. No tracking. No data mining.<br>
+      Simple is free — forever. No ads. No account. No tracking. No data mining.<br>
       Optional support only — it does not unlock features.<br>
       It helps cover costs like Apple’s yearly developer fee and new equipment. Thank you ❤️
     </div>
