--- a/index.html
+++ b/index.html
@@ -311,6 +311,14 @@ body.dark .pill{
 
 </style>
 
+<style>
+/* --- Button font: clean system font, readable weight --- */
+button, .phChip, .soundChip, .chip, #phChips button{
+  font-family: system-ui, -apple-system, "Segoe UI", Roboto, Arial, sans-serif !important;
+  font-weight: 700 !important;
+  letter-spacing: 0.3px !important;
+}
+</style>
 </head>
 <body class="theme-hi size-normal mode-caregiver ultra">
 <script>
